--- a/templates/home.html
+++ b/templates/home.html
@@ -17,7 +17,7 @@
                   </div>
             </div>
             <div class = "col-md-6 mt-5 p-3 " id="img_banner">
-                      <img src = "static\images\latest-aari-work-blouse-design-removebg.png" width="auto" height="auto" alt="banner">
+                      <img src = "static\images\latest-aari-work-blouse-design-removebg.png" class="img-responsive" width="600px" height="700px" alt="banner">
 
             </div>
 
@@ -121,8 +121,8 @@
       </section>
 
 <section>
-        <div class="container mt-5 mb-4">
-            <div class="row mt-3">
+        <div class="container mt-5">
+            <div class="row mt-3 mb-3">
                 <div class="col-md-6 p-3">        
                   <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
                     <div class="carousel-indicators">
@@ -135,7 +135,7 @@
                       <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="6" aria-label="Slide 7"></button>
 
                     </div>
-                    <div class="carousel-inner" style=" width:100%; height: 500px !important;">
+                    <div class="carousel-inner" style=" width:500px; height: 500px !important;">
                       <div class="carousel-item active">
                         <img src="static/images/c1.jpg" class="d-block w-100" alt="...">
                         
@@ -176,9 +176,9 @@
                   </div>
 
                 </div>
-                <div class="col-md-6 p-3 ">
-                  <div class="list-group p-3">
-                    <a href="" class="list-group-item disabled"><h3 class="heading">Products</h3></a>
+                
+                  <div class="list-group p-3 col-md-6 p-3 text-center">
+                    <a href="" class="list-group-item disabled"><h3>Products</h3></a>
                     <a href="/Modern_works_Blouse" class="list-group-item">Modern works Blouse </a>
                     <a href="/Bridal_designer_Blouse" class="list-group-item">Bridal designer Blouse</a>
                     <a href="/lehengas" class="list-group-item">lehengas</a>
