--- a/templates/items.html
+++ b/templates/items.html
@@ -5,23 +5,21 @@
     <div class="container ">
         <h3 class="mt-3 mb-5" id="head">{{ title }}</h3>
         {% for item in items %}
-        <div class="row mt-3">
-            <div class = "col-md-6 p-3 text-center">
-                
-                
-                <img class="img-responsive"  src="{{ url_for('static', filename=item['img']) }}" width= "400" height = "400">
-                <h3 class="mt-3" >{{ item["name"] }}</h3>
-                <p class= "lead">{{ item["price"] }}</p>
-               
+      <div class = "row mt-3   text-center" id = "gal">
+      <div class = "col-md-12 mt-5 p-3 mb-5 d-flex justify-content-center">
+        <div class="card " style="width: 18rem;">
+            <img src="{{ url_for('static', filename=item['img']) }}" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">{{ item["name"] }}</h5>
+              <p class="card-text">{{ item["price"] }}</p>
+              <a href="whatsapp://send?text= i need your product&phone=+919361359856" class="btn "id="btn-web">Enquiry</a>
             </div>
-            <div class = "col-md-6 p-3 text-center mt-auto">
-                    
-                    <a href="whatsapp://send?text= i need your product&phone=+919361359856" class="btn" id="btn-web">Order</a>
-                    
-            </div>
+          </div>
+      </div>
+      </div>
             
             
-        </div><hr>
+        </div>
         {% endfor %}
         
         
@@ -29,7 +27,7 @@
 
 
 
-    </div>
+  
 
 
 
