--- a/templates/product.html
+++ b/templates/product.html
@@ -4,10 +4,9 @@
 
 <section id="banner">
     <div class="container ">
-      <h3 class="mt-3 mb-5" id="head">Products</h3>
+  <h2 class ="prodtitle">Products</h2>
 
-
-        <div class = "row   text-center" id = "gal">
+        <div class = "row mt-3   text-center" id = "gal">
           <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
             <div class="card " style="width: 18rem;">
                 <img src="static\images\c1.jpg" class="card-img-top" alt="...">
