--- a/templates/home.html
+++ b/templates/home.html
@@ -37,6 +37,11 @@
          <p class="lead" id="para">
             Choose our embroidery service for an unparalleled blend of timeless designs, customization options, timely delivery, and affordability. Your satisfaction is our top priority, and we look forward to adorning your wardrobe with the magic of Aari work. Elevate your fashion quotient with us – where every stitch is a masterpiece!
          </p>
+          <!-- <div class="row text-center m-3">
+            
+          <img src= "static\images\steps.png" width="600px" height = "300px">
+          
+          </div> -->
          <div class="text-center mb-5">
          <a href="/contact" class="btn" id="btn-web">Enquiry</a>
          </div>
@@ -181,7 +186,7 @@
                     <a href="" class="list-group-item disabled"><h3>Products</h3></a>
                     <a href="/Modern_works_Blouse" class="list-group-item">Modern works Blouse </a>
                     <a href="/Bridal_designer_Blouse" class="list-group-item">Bridal designer Blouse</a>
-                    <a href="/lehengas" class="list-group-item">lehengas</a>
+                    <a href="/lehengas" class="list-group-item">lehengas and chudi neck designs</a>
                     <a href="/Cutworks" class="list-group-item">Cut works</a>
                     <a href="/Mirrorworks" class="list-group-item">Mirror works</a>
                     <a href="/ZardosiworkBlouse" class="list-group-item">Zardosi work Blouse</a>
