--- a/templates/items.html
+++ b/templates/items.html
@@ -11,7 +11,7 @@
             <img src="{{ url_for('static', filename=item['img']) }}" class="card-img-top" alt="...">
             <div class="card-body">
               <h5 class="card-title">{{ item["name"] }}</h5>
-              <p class="card-text">{{ item["price"] }}</p>
+              <!-- <p class="card-text">{{ item["price"] }}</p> -->
               <a href="whatsapp://send?text= i need your product&phone=+919361359856" class="btn "id="btn-web">Enquiry</a>
             </div>
           </div>
