--- a/templates/product.html
+++ b/templates/product.html
@@ -9,7 +9,7 @@
         <div class = "row mt-3   text-center" id = "gal">
           <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
             <div class="card " style="width: 18rem;">
-                <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                <img src="static\images\m1.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
                   <h5 class="card-title">Modern works Blouse</h5>
                   <p class="card-text">Contemporary elegance, tailored with precision for the fashion-forward woman.</p>
@@ -29,9 +29,9 @@
           </div>
           <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
             <div class="card " style="width: 18rem;">
-                <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                <img src="static\images\l4.jpg" class="card-img-top" alt="...">
                 <div class="card-body">
-                  <h5 class="card-title">lehengas</h5>
+                  <h5 class="card-title">lehengas and chudi neck designs</h5>
                   <p class="card-text">Timeless grace embodied in every twirl; our lehengas redefine ethnic allure.</p>
                   <a href="/lehengas" class="btn "id="btn-web">View Products</a>
                 </div>
@@ -42,7 +42,7 @@
             
             <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
               <div class="card" style="width: 18rem;">
-                  <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                  <img src="static\images\cw1.jpeg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Cut works</h5>
                     <p class="card-text">Artistry in every cut; these creations seamlessly blend tradition with modernity.</p>
@@ -53,7 +53,7 @@
   
             <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center ">
               <div class="card " style="width: 18rem;">
-                  <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                  <img src="static\images\mir1.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Mirror works</h5>
                     <p class="card-text">Reflecting opulence, our mirror work designs illuminate your style with radiance.</p>
@@ -63,7 +63,7 @@
             </div>
             <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
               <div class="card" style="width: 18rem;">
-                  <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                  <img src="static\images\z1.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Zardosi work Blouse</h5>
                     <p class="card-text">Intricately woven tales of tradition; our Zardosi blouses are a testament to luxury.</p>
@@ -76,7 +76,7 @@
           <div class = "row  text-center" id = "gal">
             <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
               <div class="card " style="width: 18rem;">
-                  <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                  <img src="static\images\sw1.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Saree Waist Belts</h5>
                     <p class="card-text">Accentuate your curves with our statement waist belts, the perfect finishing touch.</p>
@@ -86,7 +86,7 @@
             </div>
             <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
               <div class="card" style="width: 18rem;">
-                  <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                  <img src="static\images\p1.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
                     <h5 class="card-title">Pattu Pavadai Works</h5>
                     <p class="card-text">Crafted for little princesses, each Pattu Pavadai is a fairy tale in fabric.</p>
@@ -96,7 +96,7 @@
             </div>
             <div class = "col-md-4 mt-5 p-3 mb-5 d-flex justify-content-center">
                 <div class="card" style="width: 18rem;">
-                    <img src="static\images\c1.jpg" class="card-img-top" alt="...">
+                    <img src="static\images\3d1.jpg" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">3D Blouse works</h5>
                       <p class="card-text">Your vision, our creation; bespoke bridal wear tailored to perfection.</p>
