--- a/templates/home.html
+++ b/templates/home.html
@@ -211,7 +211,7 @@
               </div>
           <h4 class="heading">Say "Hello" :</h4>
           <div class="text-center mb-3">
-          <a  href= "tel:9361359856"  id= "contact_details"> +91 9962952898 <br> +91 9791129115</a>
+          <a  href= "tel:900000000"  id= "contact_details"> +91 900000000 <br> +91 900000000</a>
             </div>
           </div>
           <div class = "col-md-6 mt-2">
@@ -221,7 +221,7 @@
               
           <h4 class="heading">Email Address :</h4>
           <div class="text-center mb-3">
-          <a class="text-center" href="mailto:snehasneha85511@gmail.com"   id= "contact_details"> snehasneha85511@gmail.com </p></a>
+          <a class="text-center" href="mailto:abc123@gmail.com"   id= "contact_details"> abc123@gmail.com </p></a>
         </div>
           </div>
         </div>
