--- a/templates/home.html
+++ b/templates/home.html
@@ -243,9 +243,9 @@
           <p class=" text-center " id= "contact_details">
         
               <p href="" class = "text-center"   id="contact_details">
-                NO: 382 Thiruvalluvar Street,<br>
-                Vadagarai,Redhills.<br>
-                Chennai - 600052<br>
+                NO: 123 Thiruvallur Street,<br>
+                abc,xyz<br>
+                Chennai - 600072<br>
               </p>
             
           </p>
