--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,7 +21,7 @@
                       <img  src="static/images/icons8-call-50.png" width="50px" height="50px">
                       </div>
                   <h4 class="heading">Say "Hello" :</h4>
-                  <a href="tel: 9361359856" class=" text-center " id= "contact_details"> +91 9361359856 <br> +91 9791129115</a>
+                  <a href="tel: 9000000000" class=" text-center " id= "contact_details"> +91 9000000000 <br> +91 9000000000</a>
                     
                   </div>
                   <div class = "col-md-6 mt-2">
@@ -29,7 +29,7 @@
                       <img  src="static/images/icons8-email-50 (1).png" width="50px" height="50px">
                       </div>
                   <h4 class="heading">Email Address :</h4>
-                  <a href="mailto:snehasneha85511@gmail.com" class=" text-center " id= "contact_details"> snehasneha85511@gmail.com </a>
+                  <a href="mailto:abc123@gmail.com" class=" text-center " id= "contact_details"> abc123@gmail.com </a>
                     
                   </div>
                 </div>
@@ -51,9 +51,9 @@
                   <p class=" text-center " id= "contact_details">
                 
                       <p  class = "text-center"   id="contact_details">
-                        NO: 382 Thiruvalluvar Street,<br>
-                        Vadagarai,Redhills.<br>
-                        Chennai - 600052<br>
+                        NO: 123 Thiruvallur Street,<br>
+                        abc,xyz<br>
+                        Chennai - 600072<br>
                       </p>
                     
                   </p>
